--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,15 +6,30 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@font-face {
+  font-family: Jakarta;
+  font-weight: 400;
+  src: url("../assets/fonts/woff2/PlusJakartaSans-Regular.woff2")
+      format("woff2"),
+    url("../assets/fonts/woff/PlusJakartaSans-Regular.woff") format("woff");
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-family: Jakarta;
+  font-weight: 700;
+  src: url("../assets/fonts/woff2/PlusJakartaSans-Bold.woff2") format("woff2"),
+    url("../assets/fonts/woff/PlusJakartaSans-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: Jakarta;
+  font-weight: 300;
+  src: url("../assets/fonts/woff2/PlusJakartaSans-Light.woff2") format("woff2"),
+    url("../assets/fonts/woff/PlusJakartaSans-Light.woff") format("woff");
+}
+
+html,
+body {
+  font-family: Jakarta, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
