--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,3 +33,7 @@ body {
   font-family: Jakarta, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+body {
+  min-height: 100vh;
+}
